# desktop

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
databases/: Data.csv
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/databases/: Test.csv  Test2.csv
scripts/: build_win.sh
src/: App.cpp  App.h  CSV.h  Image.cpp  Image.h  Main.cpp  Types.h  main.cpp
